# dsp_toolbox

./: .clang-format  .clang-tidy  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.bat  build.sh
.github/workflows/: build.yml
analysis/: zerocrossing.h
core/: audio_buffer.h  buffer_view.h  constants.h  processor.h  processor_chain.h  processor_node.h  ring_buffer.h
delay/: mono_delay.h
dynamics/: gain.h  limiter.h
examples/Beeper/: CMakeLists.txt
examples/Beeper/src/: main.cpp
examples/MidiClipGenerator/: CMakeLists.txt
examples/MidiClipGenerator/src/: main.cpp
generators/: adsr.h  noisegenerators.h  wavegenerators.h
helpers/: compilationhelpers.h
include/dsp_toolbox/benchmark/: autotune.hpp  benchmark.hpp  clock.hpp  execution_plan.hpp  executor.hpp
include/dsp_toolbox/core/: buffer_view.hpp  concepts.hpp  constexpr_spec.hpp  conversions.hpp  crv.hpp  decibels.hpp  decibels_full_scale.hpp  frequency.hpp  heap_audio_buffer.hpp  io_config.hpp  linear_gain.hpp  literals.hpp  midi_note_number.hpp  milliseconds.hpp  modulation_system.hpp  notes.hpp  param.hpp  process_spec.hpp  sample_rate.hpp  samples.hpp  seconds.hpp  smoothed_value.hpp  static_audio_buffer.hpp  strong_types.hpp
include/dsp_toolbox/math/: constants.hpp  functions.hpp  lookup_table.hpp  math.hpp
include/dsp_toolbox/processors/core/: iprocessor.hpp  processor_base.hpp
include/dsp_toolbox/processors/dynamics/: waveshaper.hpp
include/dsp_toolbox/processors/filters/: biquad.hpp  multiband_eq.hpp  one_pole.hpp  stereo_multiband_eq.hpp
include/dsp_toolbox/processors/generators/: vco.hpp  white_noise.hpp
include/dsp_toolbox/processors/graph/: constexpr_graph.hpp  graph_processor_concepts.hpp
include/dsp_toolbox/processors/modulators/: ad_envelope.hpp  clock.hpp  clock_divider.hpp  lfo.hpp  sample_and_hold.hpp  slew_limiter.hpp  step_sequencer.hpp
include/dsp_toolbox/processors/utilities/: attenuverter.hpp  gain.hpp  mixer.hpp  oversampler.hpp  panner.hpp  resampler.hpp  stereo_expander.hpp  stereo_gain.hpp  vca.hpp
include/dsp_toolbox/simd/: block.hpp  simd.hpp
midi/: midi_file.h  midi_message.h  midi_sequence.h
musicality/: musical_time.h
musicality/constants/: scales.h
musicality/generators/: melody_generator.h
playfultones_dsptoolbox/: README.md  playfultones_dsptoolbox.cpp  playfultones_dsptoolbox.h
playfultones_dsptoolbox/src/: juce_buffer_view.h  juce_parameter_helpers.h  juce_processor_adapter.h
processors/: processor.h
processors/graph/: audio_graph.h  audio_graph_node.h  audio_processor_graph.h  graph_builder.h  output_processor.h
tests/: test_audio_graph.cpp  test_buffer_validators.cpp  test_midi_message.cpp  test_midi_sequence.cpp  test_musical_time.cpp  test_processor_chain.cpp  test_ring_buffer.cpp  test_zero_crossing.cpp
validators/: buffer_validators.h
